tests/baselines/reference/u-invalid-optional-lookbehind.errors.txt
u-invalid-optional-lookbehind.ts(19,9): error TS1505: There is nothing available for repetition.
u-invalid-optional-lookbehind.ts(19,11): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== u-invalid-optional-lookbehind.ts (2 errors) ====
    // Copyright (C) 2018 Igalia S. L. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    /*---
    esid: sec-regular-expressions-patterns
    description: Lookbehinds are not treated as a QuantifiableAssertion
    info: |
        Term[U] ::
             [~U] QuantifiableAssertion Quantifier
    
        QuantifiableAssertion[N]::
            ( ? = Disjunction[~U, ?N] )
            ( ? ! Disjunction[~U, ?N] )
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /.(?<=.)?/u;
            ~
!!! error TS1505: There is nothing available for repetition.
              ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    